[package]
edition = "2021"
name = "napi-rs_cpu-features"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi6"] }
napi-derive = "3"
sysinfo = "0.36"

[target.'cfg(all(target_arch = "aarch64", target_os = "macos"))'.dependencies]
core-foundation = "0.10"
libc = "0.2"
once_cell = "1"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = "11"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"